[package]
name = "mitm-proxy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = "0.24.1"
lazy_static = "1.4.0"
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
tokio = { version = "1.32.0", features = ["full"] }
